# jpn-geo

./: .gitignore  README.md  convertN03.py  pyproject.toml
parquet/N03/: N03-20240101_02.parquet  N03-20240101_05.parquet  N03-20240101_06.parquet  N03-20240101_08.parquet  N03-20240101_09.parquet  N03-20240101_10.parquet  N03-20240101_11.parquet  N03-20240101_14.parquet  N03-20240101_15.parquet  N03-20240101_16.parquet  N03-20240101_17.parquet  N03-20240101_18.parquet  N03-20240101_19.parquet  N03-20240101_20.parquet  N03-20240101_21.parquet  N03-20240101_23.parquet  N03-20240101_25.parquet  N03-20240101_26.parquet  N03-20240101_27.parquet  N03-20240101_29.parquet  N03-20240101_31.parquet  N03-20240101_33.parquet  N03-20240101_36.parquet  N03-20240101_37.parquet  N03-20240101_41.parquet  N03-20240101_44.parquet
util/: convertN03.py  get_pref_gdf.py
